Archive2/ba/71abc3588307a6/output
main.cpp:6:22: warning: missing terminating " character [enabled by default]
 std::stringstream in("1 2 2 5 3 3 5
                      ^
main.cpp:6:1: error: missing terminating " character
 std::stringstream in("1 2 2 5 3 3 5
 ^
main.cpp:7:37: warning: missing terminating " character [enabled by default]
                       9 8 5 1 4 2 9 ");
                                     ^
main.cpp:7:23: error: missing terminating " character
                       9 8 5 1 4 2 9 ");
                       ^
main.cpp:7:25: error: expected ')' before numeric constant
                       9 8 5 1 4 2 9 ");
                         ^
main.cpp:28:1: error: expected ',' or ';' at end of input
 }
 ^
